<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/pic"
                    android:layout_width="411dp"
                    android:layout_height="227dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/pic_detail" />

                <View
                    android:id="@+id/view"
                    android:layout_width="411dp"
                    android:layout_height="49dp"
                    android:background="#70000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.363"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.25"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/view"
                    app:layout_constraintVertical_bias="0.238"
                    app:srcCompat="@drawable/marker_detail" />

                <TextView
                    android:id="@+id/titleTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:text="Home with view "
                    android:textColor="@color/white"
                    android:textSize="21sp"
                    android:textStyle="bold"

                    app:layout_constraintBottom_toBottomOf="@+id/pic"
                    app:layout_constraintStart_toStartOf="@+id/imageView15"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.884" />

                <TextView
                    android:id="@+id/addressTxt"
                    android:layout_width="216dp"
                    android:layout_height="21dp"
                    android:text="Sanfrancisco ,CA"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.601"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:text="$000,000"
                android:layout_margin="16dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationX="18sp" />

            <LinearLayout
                android:layout_width="393dp"
                android:layout_height="84dp"
                android:background="@drawable/detail_top_background"
                android:elevation="3dp"
                android:orientation="horizontal"
                android:translationX="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="115dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3333">

                    <ImageView
                        android:id="@+id/imageView16"
                        android:layout_width="69dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:contentDescription="TODO"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.475"
                        app:srcCompat="@drawable/bed" />

                    <TextView
                        android:id="@+id/bedtext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bed"
                        android:textColor="#575454"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.924"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/view3"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#FBFBFB" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="105dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3333">

                    <ImageView
                        android:id="@+id/imageView17"
                        android:layout_width="65dp"
                        android:layout_height="23dp"
                        android:layout_weight="1"
                        android:contentDescription="TODO"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.438"
                        app:srcCompat="@drawable/bath" />

                    <TextView
                        android:id="@+id/bathtext"
                        android:layout_width="37dp"
                        android:layout_height="26dp"
                        android:layout_weight="1"
                        android:text="@string/bathh"
                        android:textColor="#575454"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.902"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.465" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="6dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#FBFBFB"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="118dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3333">

                    <ImageView
                        android:id="@+id/imageView18"
                        android:layout_width="70dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:contentDescription="TODO"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.075"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.466"
                        app:srcCompat="@drawable/wifi" />

                    <TextView
                        android:id="@+id/wifitext"
                        android:layout_width="55dp"
                        android:layout_height="22dp"
                        android:layout_weight="1"
                        android:text="@string/wifii"
                        android:textColor="#575454"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.451" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/view2"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#FBFBFB" />

            </LinearLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="#000000"
                android:layout_margin="16dp"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/descriptionTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="This 2bed /1 bath home boasts an enormous,
architectural features and high-end finishes.
Feel inspiredby open sight lines that embrace the outdoors, crowned by stunning coffered ceilings."
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                style="@android:style/Widget.Button"
                android:layout_margin="32dp"
                android:background="@drawable/background_btn"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Buy Now" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>